# QRust

./: CMakeLists.txt  README.md
qt_window/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metastruct.h  qrust_de.cpp  qrust_de.h  qrust_ser.cpp  qrust_ser.h  rust.cpp  rust.h
rust/: Cargo.toml
rust/serde_qrust/: Cargo.toml
rust/serde_qrust/src/: de.rs  error.rs  lib.rs  ser.rs  tag.rs
rust/src/: api.rs  lib.rs
